# pyi

./: CHANGELOG.md  README.md  ci_tools.py  dcs_py.py  dcspy.iss  dcspy.spec  dcspy_cli.spec  dcspy_onedir.spec  file_version_info.txt  generate_ver_file.py  latest_tag.py  punch_config.py  punch_version.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  sonar-project.properties
.github/actions/build-app/: action.yaml
.github/actions/mypy/: action.yaml
.github/actions/setup-python/: action.yaml
.github/actions/setup-python-ubuntu-latest/: action.yaml
.github/actions/setup-python-windows-latest/: action.yaml
.github/workflows/: build.yml  build_nuitka.yml  build_pyinstaller.yml  build_wheel.yml  coverage.yml  license.yml  lint.yml  lupa.yml  lupa_all.yml  nuitka.yml  nuitka_old.yml  pyinstaller.yml  python-ci.yml  release-ci.yml  release.yml  style.yml  test.yml
dcspy/: __init__.py  config.yaml  log.py  migration.py  qt_gui.py  run.py  starter.py  tk_gui.py  utils.py
dcspy/resources/: config.yaml
docs/: install.md
inno/: Arabic.isl  Armenian.isl  BrazilianPortuguese.isl  Bulgarian.isl  Catalan.isl  Corsican.isl  Dutch.isl  Finnish.isl  French.isl  German.isl  Hebrew.isl  Hungarian.isl  Italian.isl  Japanese.isl  Norwegian.isl  Polish.isl  Slovak.isl  Spanish.isl  Swedish.isl  Tamil.isl  Turkish.isl  Ukrainian.isl  dcspy.iss
scripts/: gen_ref_pages.py  generate_ver_file.py
src/: dcs_py.py
src/dcspy/: __init__.py  migration.py  models.py  qt_gui.py  run.py  starter.py  utils.py
src/dcspy/resources/: config.yaml
tests/: conftest.py  test_aircraft.py  test_migration.py  test_models.py  test_utils.py
tests/resources/: A-10C_2.yaml  DIGESTS  config.yaml  dcspy_3.6.1.json  dcspy_3.6.1.json.DIGESTS
tests/resources/Saved.Games.DCS/Scripts/DCS-BIOS/doc/: Addresses.h
(+4 files in other folders)
