[metadata]
name = dcspy
version = 1.9.5
author = Michal Plichta
maintainer = Michal Plichta
description = Integrating DCS (Digital Combat Simulator) planes with Logitech G13/G15/G510/G19 LCD
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Simulation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Hardware
    Topic :: Utilities
keywords = logitech, logitech-sdk, logitech-keyboards, logitech-gaming, logitech-gaming-keyboard, dcs-world, dcs, g13, g15, g510, g19
platforms = win32, nt, Windows
url = https://github.com/emcek/dcspy
project_urls =
    Bug Reports = https://github.com/emcek/dcspy/issues
    Source = https://github.com/emcek/dcspy

[options]
include_package_data = True
packages = find:
zip_save = False
python_requires = >=3.7
install_requires =
    customtkinter
    Pillow
    PyYAML


[options.entry_points]
console_scripts =
        dcspy_cli = dcspy.run:run
gui_scripts  =
        dcspy = dcspy.run:run

[options.packages.find]
exclude =
    tests*

[options.package_data]
dcspy =
    py.typed
    *.ico
    *.png
    *.yaml
    *.ttf
